# ge-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-emscripten.bat  index.html  quiet_http_server.py  start-http-server.bat  test.bat
.run/: CalculateBRDF.run.xml  GameEngine-Emscripten.run.xml  GameEngine.run.xml  PackageAssets-NoCopy.run.xml  PackageAssets.run.xml  Sandbox-Emscripten.run.xml  Sandbox.run.xml
GameEngine/: CMakeLists.txt  GameEngine.hpp
GameEngine/assets/: gltfloader.hpp
GameEngine/engine/: App.cpp  Scene.cpp  Window.cpp
GameEngine/engineAssets/: calculateEquirectangularIrradiance.wgsl  calculateEquirectangularPrefilter.wgsl  equirectangularSkybox.wgsl  pbr.wgsl
GameEngine/rendering/backends/webgpu/: WebGPURenderer.cpp  WebGPUShader.hpp
GameEngine/src/: GameEngine.hpp  gepch.hpp
GameEngine/src/GameEngine/Assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager.tpp  gltfloader.cpp  gltfloader.hpp
GameEngine/src/GameEngine/Core/: App.cpp  App.hpp  Exit.cpp  Exit.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
GameEngine/src/GameEngine/Engine/: App.cpp  App.hpp  Entity.hpp  Input.hpp  Random.hpp  Scene.cpp  Time.cpp  Window.cpp
GameEngine/src/GameEngine/Rendering/: CubeMap.cpp  CubeMap.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp
GameEngine/src/GameEngine/Rendering/Backends/WebGPU/: WebGPURenderer.cpp  WebGPURenderer.hpp  WebGPUShader.cpp  WebGPUShader.hpp  generateMipmapWebGPU.cpp  generateMipmapWebGPU.hpp  textureUtils.cpp  textureUtils.hpp
GameEngine/src/GameEngine/Rendering/backends/webgpu/: WebGPURenderer.cpp  WebGPUShader.cpp
GameEngine/src/GameEngine/Scene/: Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.cpp  ScriptableEntity.hpp  prefab.cpp  prefab.hpp  renderImGuiHeirarchy.cpp  renderImGuiHeirarchy.hpp
GameEngine/src/GameEngine/Utility/: Random.cpp  Random.hpp  RollingAverage.cpp  RollingAverage.hpp  ThreadPool.cpp  ThreadPool.hpp  TimingHelper.cpp  TimingHelper.hpp  emscriptenUtility.cpp  emscriptenUtility.hpp  emscriptenUtility.js  parseHDRWorker.js  stbImpl.cpp  utility.cpp  utility.hpp
GameEngine/src/GameEngine/Utility/Stream/: FileStreamReader.cpp  FileStreamReader.hpp  FileStreamWriter.cpp  FileStreamWriter.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
GameEngine/utility/: emscriptenUtility.cpp  utility.hpp
Sandbox/: .gitignore  CMakeLists.txt  packageAssetsEmscripten.bat  resources.rc
Sandbox/assets/: BRDF.getexture  prefab.json  sphere.glb.asset  test.hdr
Sandbox/assets/BoomBoxPackaged/: BoomBox.asset
Sandbox/assets/FlightHelmetPackaged/: FlightHelmet.asset  FlightHelmet.gemesh  FlightHelmet.geprefab  GlassPlastic_low.gemesh  Hose_low.gemesh  LeatherParts_low.gemesh  Lenses_low.gemesh  MetalParts_low.gemesh  RubberWood_low.gemesh
Sandbox/assets/shaders/: basic_color.wgsl  calculateEquirectangularIrradiance.wgsl  calculateEquirectangularPrefilter.wgsl  equirectangularSkybox.wgsl  fullscreen_color.wgsl  fullscreen_texture.wgsl  pbr.wgsl  simple_triangle.wgsl  skybox.wgsl  uniform_color_triangle.wgsl  unlit_color.wgsl
Sandbox/platform/emscripten/: index.html
Sandbox/platform/emscripten/scripts/: preloadAssetsEmscripten.bat  start-http-server.bat  start-http-server.py
Sandbox/shaders/: basic_color.wgsl  pbr.wgsl  unlit_color.wgsl
Sandbox/src/: sandboxApp.cpp
Sandbox/src/scripts/: CameraController.cpp  CameraController.hpp  FullscreenTexture.cpp  FullscreenTexture.hpp  ImGuiDemoWindow.cpp  ImGuiDemoWindow.hpp  PBRColorRandomizer.cpp  PBRColorRandomizer.hpp  Rotator.cpp  Rotator.hpp  TestRenderer.cpp  TestRenderer.hpp  TestScript.cpp  TestScript.hpp  TrackFramerate.cpp  TrackFramerate.hpp  scripts.hpp
Sandbox/src/utility/: utility.cpp  utility.hpp
Sandbox/unpackagedAssets/: packageHDRI.bat  sphere.glb
Sandbox/webBuildStuff/: index.html
Tools/: CMakeLists.txt  testTool.cpp
Tools/CalculateBRDF/: main.cpp
Tools/PackageAssets/: main.cpp
Tools/PackageAssets/PackageGLTF/: meshPacker.hpp  packageGLTF.cpp  packageGLTF.hpp
Tools/PackageAssets/PackageHDRI/: computePreFilter.hpp  packageHDRI.cpp  packageHDRI.hpp
Tools/PackageGLTF/: gltfPacker.cpp  gltfPacker.hpp  gltfloader.cpp  gltfloader.hpp  main.cpp  meshPacker.cpp  meshPacker.hpp  packageGLTF.cpp  texturePacker.cpp  texturePacker.hpp  tinygltfImpl.cpp
Tools/PackageHDRI/: computeIrradiance.cpp  computeIrradiance.hpp  computePreFilter.cpp  computePreFilter.hpp  main.cpp
browser-reloader/: index.js  package-lock.json  package.json
cmake/: copyFileRelative.cmake
github-pages/example/: Sandbox.js  Sandbox.wasm  assets.js  index.html  parseHDRWorker.js
sandbox/: CMakeLists.txt  sandboxApp.cpp  sandboxApp.hpp
sandbox/scripts/: ImGuiDemoWindow.hpp  TestRenderer.cpp  TestRenderer.hpp  TestScript.cpp  TestScript.hpp  TrackFramerate.cpp  TrackFramerate.hpp
sandbox/src/: main.cpp  sandboxApp.cpp
sandbox/src/scripts/: ImGuiDemoWindow.cpp  ImGuiDemoWindow.hpp  TestRenderer.cpp  TestRenderer.hpp  TestScript.cpp  TestScript.hpp  TrackFramerate.cpp  TrackFramerate.hpp
shaders/: basic_triangle.wgsl  fullscreen_color.wgsl  simple_triangle.wgsl  uniform_color_triangle.wgsl
src/: CMakeLists.txt  GameEngine.hpp  RollingAverage.cpp  RollingAverage.hpp  gltfloader.cpp  gltfloader.hpp  main.cpp  tiny_gltf_http_fs.cpp  tiny_gltf_http_fs.hpp  utility.cpp  utility.hpp  webGPU.cpp  webGPUDawn.cpp  webGPUEmscripten.cpp  webGPUEmscripten.hpp  webgpu.cpp  webgpu.hpp
src/assets/: gltfloader.cpp
src/engine/: App.cpp  App.hpp  Components.hpp  Entity.cpp  Entity.hpp  Input.cpp  KeyCode.hpp  Scene.cpp  Scene.hpp  ScriptableEntity.cpp  ScriptableEntity.hpp  Time.hpp  Window.cpp  Window.hpp
src/sandbox/: ImGuiDemoWindow.hpp  SandboxApp.cpp  SandboxApp.hpp  TestRenderer.cpp  TestRenderer.hpp  TestScript.cpp  TestScript.hpp  TrackFramerate.cpp  TrackFramerate.hpp  sandboxApp.cpp
tools/: CMakeLists.txt  testTool.cpp
(+14 files in other folders)
